# app/Http/Controllers/API/BookController.php
@@ -19,7 +19,7 @@ class BookController extends Controller
 {
     /**
      * @OA\Get(
-     *     path="/api/book",
+     *     path="/my-api/public/api/book",
      *     tags={"book"},
      *     summary="Display a listing of items",
      *     operationId="index",
@@ -38,7 +38,7 @@ class BookController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/book",
+     *     path="/my-api/public/api/book",
      *     tags={"book"},
      *     summary="Store a newly created item",
      *     operationId="store",
@@ -87,7 +87,7 @@ class BookController extends Controller
     }
     /**
      * @OA\Get(
-     *     path="/api/book/{id}",
+     *     path="/my-api/public/api/book/{id}",
      *     tags={"book"},
      *     summary="Display the specified item",
      *     operationId="show",
@@ -125,7 +125,7 @@ class BookController extends Controller
     }
     /**
      * @OA\Put(
-     *     path="/api/book/{id}",
+     *     path="/my-api/public/api/book/{id}",
      *     tags={"book"},
      *     summary="Update the specified item",
      *     operationId="update",
@@ -188,7 +188,7 @@ class BookController extends Controller
     }
     /**
      * @OA\Delete(
-     *     path="/api/book/{id}",
+     *     path="/my-api/public/api/book/{id}",
      *     tags={"book"},
      *     summary="Remove the specified item",
      *     operationId="destroy",
