# storage/api-docs/api-docs.json
@@ -141,7 +141,7 @@
                 ]
             }
         },
-        "/api/book": {
+        "/my-api/public/api/book": {
             "get": {
                 "tags": [
                     "book"
@@ -205,7 +205,7 @@
                 }
             }
         },
-        "/api/book/{id}": {
+        "/my-api/public/api/book/{id}": {
             "get": {
                 "tags": [
                     "book"
